--- a/Wolfden/Client/wwwroot/css/app.css
+++ b/Wolfden/Client/wwwroot/css/app.css
@@ -11360,10 +11360,10 @@ html, body {
 
 #UI .message {
   max-width: 100vw;
-  width: 800px;
+  width: min(800px, 100vw);
   height: 100px;
   top: calc(50vh - (100px / 2));
-  left: calc(50vw - (800px / 2));
+  left: calc(50vw - (min(800px, 100vw) / 2));
   display: flex;
   align-items: center;
   justify-content: center;
